--- a/gogo.html
+++ b/gogo.html
@@ -197,7 +197,7 @@
           </div>
           <div class="story flex column">
             <div class="relative">
-              <img class="story-hover"src="./images/meddeg-medeeldeg-baiy-avtomashingui-6-165706-1713335784-651152bb77b28731361084"alt=""height="230px"width="180px"/>
+              <img class="story-hover" src="./images/meddeg-medeeldeg-baiy-avtomashingui-6-165706-1713335784-651152bb77b28731361084.jpeg" alt="" height="230px" width="180px">
             </div>
             <div class="story-size flex column">
               <div>
@@ -988,12 +988,7 @@
                   </div>
                   <div class="flex">
                     <button class="btns3">
-                      <img
-                        src="./images/time-gray.9098dcef.svg"
-                        alt=""
-                        height="20px"
-                        width="15px"
-                      />
+                      <img src="./images/time-gray.9098dcef.svg"alt=""height="20px"width="15px"/>
                     </button>
                     <p>1 цагийн өмнө</p>
                   </div>
@@ -1028,12 +1023,7 @@
       </div>
       <div class="speaking flex column">
         <div class="speaking-hero flex">
-          <img
-            src="./images/microphone.png"
-            alt=""
-            height="25px"
-            width="30px"
-          />
+          <img src="./images/microphone.png"alt=""height="25px"width="30px"/>
           <h3>Ярилцлага</h3>
         </div>
         <div class="grid-container">
